--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Code Ninja Projects.loader.js";
+      var loaderUrl = buildUrl + "/PenguinWushWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Code Ninja Projects.data.gz",
-        frameworkUrl: buildUrl + "/Code Ninja Projects.framework.js.gz",
-        codeUrl: buildUrl + "/Code Ninja Projects.wasm.gz",
+        dataUrl: buildUrl + "/PenguinWushWebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/PenguinWushWebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/PenguinWushWebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Penguin Wush",
